# MIMAmulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  mimamulator.c  mimamulator.h
.github/workflows/: build.yml
c/: CMakeLists.txt  assembler.c  hash.c  hash.h  list.c  list.h  logger.c  logger.h  main.c
docs/: mima.md  tools.md
docs/extensions/: base.md  indirect.md  io.md
examples/: ai.masm  copy.masm  hello.masm  ipc.masm  outs.masm  prog.masm  prog2.masm
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/: AI.kt  Assembler.kt  Disassembler.kt  DyBuf.kt  Either.kt  IO.kt  Interpreter.kt  Main.kt  U24.kt  U24Array.kt
kotlin/src/main/kotlin/de/frohnmeyerwds/mima/: Assembler.kt  Disassembler.kt  DyBuf.kt  Interpreter.kt  Main.kt  U24.kt  U24Array.kt
kotlin/src/main/kotlin/de/frohnmeyerwds/mima/extension/: BaseExtension.kt  BaseInstruction.kt  Extension.kt  IOExtension.kt  IndirectExtension.kt
kotlin/src/main/kotlin/de/frohnmeyerwds/mima/io/: AIPort.kt  ConsolePort.kt  IO.kt  IntrospectionPort.kt  Port.kt  ReadOnlyPort.kt  SpeakerPort.kt
kotlin/src/main/kotlin/de/frohnmeyerwds/mima/util/: AsmLexer.kt  DyBuf.kt  Either.kt  U24.kt  U24Array.kt
